; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_dev.c_qed_chain_alloc_single.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_dev.c_qed_chain_alloc_single.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_dev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.qed_chain = type { i32 }

@QED_CHAIN_PAGE_SIZE = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qed_dev*, %struct.qed_chain*)* @qed_chain_alloc_single to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qed_chain_alloc_single(%struct.qed_dev* %0, %struct.qed_chain* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.qed_dev*, align 8
  %5 = alloca %struct.qed_chain*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store %struct.qed_dev* %0, %struct.qed_dev** %4, align 8
  store %struct.qed_chain* %1, %struct.qed_chain** %5, align 8
  store i32 0, i32* %6, align 4
  store i8* null, i8** %7, align 8
  %8 = load %struct.qed_dev*, %struct.qed_dev** %4, align 8
  %9 = getelementptr inbounds %struct.qed_dev, %struct.qed_dev* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* @QED_CHAIN_PAGE_SIZE, align 4
  %13 = load i32, i32* @GFP_KERNEL, align 4
  %14 = call i8* @dma_alloc_coherent(i32* %11, i32 %12, i32* %6, i32 %13)
  store i8* %14, i8** %7, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* @ENOMEM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %27

20:                                               ; preds = %2
  %21 = load %struct.qed_chain*, %struct.qed_chain** %5, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @qed_chain_init_mem(%struct.qed_chain* %21, i8* %22, i32 %23)
  %25 = load %struct.qed_chain*, %struct.qed_chain** %5, align 8
  %26 = call i32 @qed_chain_reset(%struct.qed_chain* %25)
  store i32 0, i32* %3, align 4
  br label %27

27:                                               ; preds = %20, %17
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i8* @dma_alloc_coherent(i32*, i32, i32*, i32) #1

declare dso_local i32 @qed_chain_init_mem(%struct.qed_chain*, i8*, i32) #1

declare dso_local i32 @qed_chain_reset(%struct.qed_chain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
